--- a/twig/SSB/levendefodte.html.twig
+++ b/twig/SSB/levendefodte.html.twig
@@ -21,11 +21,11 @@
 	</div>
 </form>
 {% if log is defined %}
-	<div>
+	<ol class="list-group">
 		{% for entry in log %}
-			<span class="alert-{{ entry.success ? 'success' : 'danger' }}">
+			<li class="list-group-item text-{{ entry.success ? 'success' : 'danger' }}">
 				Kommune {{ entry.id }}, antall {{ entry.antall }}. {{ entry.message }}
-			</span><br>
+			</li>
 		{% endfor %}
-	</div>
+	</ol>
 {% endif %}
