--- a/twig/dropbox/success.html.twig
+++ b/twig/dropbox/success.html.twig
@@ -1,7 +1,7 @@
 {% extends "fatalError.html.twig" %}
 
 {% block content %}
-    <h1>Dropbox-tilkobling konfigurert!</h1>
+    <h1>Flickr-tilkobling konfigurert!</h1>
     <p class="lead">Alt fungerer som det skal, og du kan nå lukke denne siden.</p>
 
     <p>Ha en fin dag!</p>
