--- a/twig/dropbox/store.html.twig
+++ b/twig/dropbox/store.html.twig
@@ -1,12 +1,10 @@
 {% extends "fatalError.html.twig" %}
 
 {% block content %}
-    <h1>Lagre access-token i UKM-config</h1>
-    <p class="lead">Alt du trenger å gjøre nå er å legge til linjen under i UKMconfig, og oppdatere denne siden.</p>
-
+    <h1>Lagre access-token i UKMconfig</h1>
+    <p class="lead">Dette gikk bra! Legg til linjen nedenfor i UKMconfig, så er alt på plass</p>    
     <code>
         define('DROPBOX_AUTH_ACCESS_TOKEN', '{{ data }}');
     </code>
 
-    <p>Ha en fin dag!</p>
 {% endblock %}
