--- a/twig/nettverk/administratorer.html.twig
+++ b/twig/nettverk/administratorer.html.twig
@@ -29,5 +29,9 @@
             </ol>
 
         </div>
+    {% else %}
+        <div class="alert alert-danger">
+            En system-feil har oppstått. Fant ikke fylker
+        </div>
     {% endfor %}
 </div>
