Flyttet ting og fått det til å funke i klasse

--- a/twig/SSB/kommuner.html.twig
+++ b/twig/SSB/kommuner.html.twig
@@ -1,61 +1,5 @@
-<h4>Kommuner i Norge</h4>
-<p>Henter inn en oppdatert liste over kommuner i Norge.</p>
-{% if kommunerViIkkeHar is defined and kommunerViIkkeHar|length > 0 %}
-	<p>Det finnes {{ kommunerViIkkeHar|length }} kommuner i Norge som ikke finnes i smartukm_kommune-tabellen! Disse må vurderes manuelt og eventuelt legges inn - det finnes kommuner som ikke skal være med som Oslo osv.</p>
-	<div>
-		<a href="#" id="kommunerViIkkeHarTrigger">Vis listen over kommuner vi ikke har</a>
-		<div style="display:none;" id="kommunerViIkkeHarListe">
-			<table class="table table-striped">
-			{% for kommune in kommunerViIkkeHar %}
-				<tr><td>{{ kommune.navn }}</td><td align="right">{{ kommune.kommune }}</td></tr>
-				{% if not kommune.note is empty %}
-					<tr><td colspan="2"><small>{{ kommune.note }}</small></td></tr>
-				{% endif %}
-			{% endfor %}
-			</table>
-		</div>
-	</div>
-{% endif %}
-<br>
-{% if kommunerViHarSomIkkeFinnesLenger is defined and kommunerViHarSomIkkeFinnesLenger|length > 0 %}
-	<p>Det finnes {{ kommunerViHarSomIkkeFinnesLenger|length }} kommuner i smartukm_kommune-tabellen som ikke finnes i Norge lengre.</p>
-	<div>
-		<a href="#" id="kommunerViHarSomIkkeFinnesLengerTrigger">Vis listen over kommuner vi har som ikke finnes lengre</a>
-		<div style="display:none;" id="kommunerViHarSomIkkeFinnesLengerListe">
-			<table class="table table-striped">
-			{% set counter = 0 %}
-			{% for kommune in kommunerViHarSomIkkeFinnesLenger if kommune.idfylke < 21 %}
-				{{ fylker.setLogMethod('quiet') }}
-				{% set fylkenavn = fylker.getById(kommune.idfylke).getNavn() %}
-				<tr><td>{{ kommune.name }}</td><td align="right"><small>{{ fylkenavn }}</small></td></tr>
-				{% set counter = counter + 1 %}
-			{% endfor %}
-			</table>
-			<small>OBS: Listen viser kun kommuner hvor fylke_id er mindre enn 21, selv om disse er tatt med i det totale antallet. Reelt antall er {{ counter }}.</small>
-		</div>
-	</div>
-
-	<script>
-		jQuery("#kommunerViHarSomIkkeFinnesLengerTrigger").click(function() {
-			if(jQuery("#kommunerViHarSomIkkeFinnesLengerListe").is(":hidden")) {
-				jQuery("#kommunerViHarSomIkkeFinnesLengerListe").slideDown();
-				jQuery("#kommunerViHarSomIkkeFinnesLengerTrigger").html("Skjul listen over kommuner vi har som ikke finnes lengre");
-			}
-			else {
-				jQuery("#kommunerViHarSomIkkeFinnesLengerListe").slideUp();
-				jQuery("#kommunerViHarSomIkkeFinnesLengerTrigger").html("Vis listen over kommuner vi har som ikke finnes lengre");
-			}
-		});
-
-		jQuery("#kommunerViIkkeHarTrigger").click(function() {
-			if(jQuery("#kommunerViIkkeHarListe").is(":hidden")) {
-				jQuery("#kommunerViIkkeHarListe").slideDown();
-				jQuery("#kommunerViIkkeHarTrigger").html("Skjul listen over kommuner vi ikke har");
-			}
-			else {
-				jQuery("#kommunerViIkkeHarListe").slideUp();
-				jQuery("#kommunerViIkkeHarTrigger").html("Vis listen over kommuner vi ikke har");
-			}
-		});
-	</script>
-{% endif %}
+<p>
+    Faktiske og "UKM-kommuner" avviker.
+     Her settes disse to listene opp mot hverandre
+</p>
+<a class="btn btn-xs btn-primary" href="?page={{ GET('page') }}&action=kommuner">Vis sammenligning</a>
