--- a/twig/SSB/kommuneareal.html.twig
+++ b/twig/SSB/kommuneareal.html.twig
@@ -1,24 +1,38 @@
-<h4>Hent kommuneareal</h4>
-<p>Kommuneareal er innhentet på en årsbasis, og benytter seg av kommunene i smartukm_kommune-tabellen.</p>
-<p>Data om areal ble sist importert for år <strong>{{ kommuneareal.getLatestYearUpdated() }}</strong>.</p>
-<form class="form" method="POST">
-	<div class="form-group">
-		<label for="year">Importer data for år</label>
-		<input type="hidden" name="postform" value="kommuneareal_update">
-		<select name="year" id="year" class="form-control">
-			{% for year in now|date("Y")..2000 %}
-				<option value="{{ year }}">{{ year }}</option>
-			{% endfor %}
-		</select>
-	</div>
-	<div class="form-group">
-		<button type="submit" class="form-control btn btn-success">Importer data fra SSB</button><br>
-		<span class="" style="font-style: italic;">OBS: Dette kan ta noe tid!</span>
-	</div>
+<p>
+    Kommuneareal brukes til beregninger for deltakelse,
+            og ble sist importert for
+    {{ SSB_kommuneareal.getLatestYearUpdated() }}.
+</p>
+{% if SSB_kommuneareal.getMissingYears()|length > 0 %}
+    <p>
+        <strong class="text-danger">OBS! Data mangler for årene
+            {% for year in SSB_kommuneareal.getMissingYears() %}
+                {{ year }}{{ loop.last ? '' : ', ' }}
+            {% endfor %}
+        </strong>
+    </p>
+{% endif %}
+
+<p style="margin-bottom: 0;">
+    Importer data for
+</p>
+<form method="POST" action="?page={{ GET('page') }}">
+    <div class="form-group" style="margin-top: 0;">
+        <select class="form-control" id="year" name="areal_year">
+            {% for year in now|date("Y")..2000 %}
+                <option value="{{ year }}">{{ year }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary btn-xs" type="submit">Start import fra SSB</button>
+        <span class="text-muted">(dette kan ta noe tid)</span>
+    </div>
 </form>
-{% if kommuneareal.log is defined %}
-	<ol class="list-group">
-		{% for entry in kommuneareal.log %}
+
+{% if SSB_kommuneareal_log is defined %}
+    <ol class="list-group">
+       {% for entry in SSB_kommuneareal_log %}
 			{% if entry is iterable %}
 				{% for logentry in entry %}
 					<li class="list-group-item text-{{ logentry.success ? 'success' : 'danger' }}">
@@ -29,5 +43,5 @@
 				<li class="list-group-item">{{ entry|raw }}</li>
 			{% endif %}
 		{% endfor %}
-	</ol>
+    </ol>
 {% endif %}
