--- a/twig/SSB/levendefodte.html.twig
+++ b/twig/SSB/levendefodte.html.twig
@@ -1,31 +1,44 @@
-<h4>Levendefødte - til målgruppeinformasjon</h4>
-<p>Data om levendefødte ble sist importert for år <strong>{{ levendefodte.getLatestYearUpdated() }}</strong>.</p>
-{% if levendefodte.getMissingYears()|length > 0 %}
-	<div class="alert alert-warning">
-		<strong>OBS! Data mangler for årene {% for year in levendefodte.getMissingYears() %}{{ year }}{{ loop.last ? '' : ', ' }}{% endfor %}</strong>
-	</div>
+<p>
+    Levendefødte er grunnlag for målgruppe-beregning,
+            og ble sist importert for
+    {{ SSB_levendefodte.getLatestYearUpdated() }}.
+</p>
+{% if SSB_levendefodte.getMissingYears()|length > 0 %}
+    <p>
+        <strong class="text-danger">OBS! Data mangler for årene
+            {% for year in SSB_levendefodte.getMissingYears() %}
+                {{ year }}{{ loop.last ? '' : ', ' }}
+            {% endfor %}
+        </strong>
+    </p>
 {% endif %}
-<form class="form" method="POST">
-	<div class="form-group">
-		<label for="year">Importer data for år</label>
-		<input type="hidden" name="postform" value="levendefodte_update">
-		<select name="year" id="year" class="form-control">
-			{% for year in now|date("Y")..2000 %}
-				<option value="{{ year }}">{{ year }}</option>
-			{% endfor %}
-		</select>
-	</div>
-	<div class="form-group">
-		<button type="submit" class="form-control btn btn-success">Importer data fra SSB</button><br>
-		<span class="" style="font-style: italic;">OBS: Dette kan ta noe tid!</span>
-	</div>
+
+<p style="margin-bottom: 0;">
+    Importer data for
+</p>
+<form method="POST" action="?page={{ GET('page') }}">
+    <div class="form-group" style="margin-top: 0;">
+        <select class="form-control" id="year" name="levendefodte_year">
+            {% for year in now|date("Y")..2000 %}
+                <option value="{{ year }}">{{ year }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary btn-xs" type="submit">Start import fra SSB</button>
+        <span class="text-muted">(dette kan ta noe tid)</span>
+    </div>
 </form>
-{% if log is defined %}
-	<ol class="list-group">
-		{% for entry in log %}
-			<li class="list-group-item text-{{ entry.success ? 'success' : 'danger' }}">
-				Kommune {{ entry.id }}, antall {{ entry.antall }}. {{ entry.message }}
-			</li>
-		{% endfor %}
-	</ol>
+
+{% if SSB_levendefodte_log is defined %}
+    <ol class="list-group">
+        {% for entry in SSB_levendefodte_log %}
+            <li class="list-group-item text-{{ entry.success ? 'success' : 'danger' }}">
+                Kommune
+                {{ entry.id }}, antall
+                {{ entry.antall }}.
+                {{ entry.message }}
+            </li>
+        {% endfor %}
+    </ol>
 {% endif %}
