--- a/twig/nettverk/administratorer.html.twig
+++ b/twig/nettverk/administratorer.html.twig
@@ -8,6 +8,8 @@
 </style>
 <h2>Administratorer</h2>
 
+{% include "wp_modul.flashBag.html.twig" %}
+
 <div class="container-fluid">
     {% for fylke in fylker %}
         <div class="row">
