--- a/twig/nettverk/administratorer-add.html.twig
+++ b/twig/nettverk/administratorer-add.html.twig
@@ -4,7 +4,7 @@
 <div style="width: 98%">
     <div class="card text-danger" id="fatalErrorContainer" style="display: none;"></div>
     <form
-        action="?page={{ GET('page') }}" id="formContainer" method="POST">
+        action="?page={{ GET('page') }}{{ doAdd is not defined ? '&action=add&fylke='~ GET('fylke') }}" id="formContainer" method="POST">
 
         {# SKJEMA FOR BRUKER-OPPRETTING / OPPDATERING #}
         {% if doAdd is defined %}
@@ -21,7 +21,7 @@
 
             <div class="form-group">
                 <label for="first_name">Fornavn</label>
-                <input class="form-control" id="first_name" type="text" name="first_name" required value="{{ user.getFirstName() }}"/>
+                <input class="form-control" id="first_name" type="text" name="first_name" required value="{{ user.getFirstName() }}" autofocus/>
             </div>
 
             <div class="form-group">
@@ -32,7 +32,7 @@
 
             <div class="form-group">
                 <label for="phone">Mobil</label>
-                <input class="form-control" id="phone" type="tel" name="phone" required value="{{ user.getPhone() }}"/>
+                <input class="form-control" id="phone" type="tel" name="phone" maxlength="8" required value="{{ user.getPhone() }}"/>
             </div>
 
             <div class="form-group" style="margin-bottom: -.2em;">
@@ -77,7 +77,7 @@
         {% else %}
             <div class="form-group">
                 <label for="email">E-postadresse</label>
-                <input class="form-control" id="email" name="email" placeholder="E-postadresse" required type="email"/>
+                <input class="form-control" id="email" name="email" placeholder="E-postadresse" required type="email" autofocus/>
             </div>
 
             <div class="form-group">
