--- a/twig/season/home.html.twig
+++ b/twig/season/home.html.twig
@@ -66,29 +66,20 @@
             <a href="?page={{ GET('page') }}&action=website_create">Opprett sider for alle kommuner og fylker</a>
         </li>
 		<li>
-			Initier ny sesong 
-			<a href="?page={{ GET('page') }}&action=ukmdb">[klikk her for å starte]</a>
-		</li>
-		<li>
-			Oppdater wordpress 
-			<a href="?page={{ GET('page') }}&action=wp_setup">[klikk her for å starte]</a>
-		</li>
-		<li>
-			Oppdater fylkesbrukernes passord 
-			<a href="?page={{ GET('page') }}&action=wp_users">[klikk her for å starte]</a>
-		</li>
-		<li>
-			Opprett nye mønstringssider 
-			<a href="?page={{ GET('page') }}&action=wp_blogs">[klikk her for å starte]</a>
-		</li>
-		<li>
-			Oppdater URL-adresser 
-			<a href="#" data-old="/wp-admin/network/admin.php?page=UKMsystemtools_modrewrite">[klikk her for å re-generere adresser]</a>
+			<a href="?page={{ GET('page') }}&action=wp_setup">Oppdater wordpress </a>
 		</li>
 		<li>
 			Fiks bruker for Lærdal og Lardal 
-			<a href="#" data-old="//github.com/UKMNorge/UKMnetwork_admin/issues/4" target="_blank">[les mer]</a>
+			<br />
+            <small>
+            Sjekk at begge to har sin bruker, og at den peker til riktig blogg
+            </small>
 		</li>
+        <li>
+            <a href="/wp-admin/network/index.php?page=UKMnettverket_fylker">
+            Gjennomgå listen over administrator i fylkene
+            </a>
+        </li>
 	</ol>
 </div>
 <div class="clearfix"></div>
