Verktøy for å deaktivere alle brukere

--- a/twig/season/home.html.twig
+++ b/twig/season/home.html.twig
@@ -62,6 +62,9 @@
         <li>
             <a href="?page={{ GET('page') }}&action=website_clean">Gjør klar nettsiden</a>
         </li>
+        <li>
+            <a href="?page={{ GET('page') }}&action=password_reset">Nullstill alle passord</a>
+        </li>
 		<li>
             <a href="?page={{ GET('page') }}&action=website_create">Opprett sider for alle kommuner og fylker</a>
         </li>
