--- a/twig/dashboard.html.twig
+++ b/twig/dashboard.html.twig
@@ -1,26 +1,37 @@
 <div class="container-fluid" style="margin-right: 2em;">
-    <div class="row">
-        <div class="col-xs-12">
-            {% include "wp_modul.flashbag.html.twig" %}
-        </div>
-    </div>
-    <div class="row">
-        {% if CFauthenticated %}
-            <div class="col-xs-12 col-sm-6 col-lg-4">
-                {% include "cloudflare/actions.html.twig" %}
-            </div>
-        {% endif %}
-        
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-            {% include "dashboard/api.html.twig" %}
-        </div>
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-            {% include "dashboard/import.html.twig" %}
-        </div>        
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-            {% include "dashboard/modrewrite.html.twig" %}
-        </div>
-    </div>
+	<div class="row">
+		<div class="col-xs-12">
+			{% include "wp_modul.flashbag.html.twig" %}
+		</div>
+	</div>
+	<div class="row">
+		{% if CFauthenticated %}
+			<div class="col-xs-12 col-sm-6 col-lg-4">
+				{% include "cloudflare/actions.html.twig" %}
+			</div>
+		{% endif %}
+
+		<div class="col-xs-12 col-sm-6 col-lg-4">
+			{% include "dashboard/api.html.twig" %}
+		</div>
+		<div class="col-xs-12 col-sm-6 col-lg-4">
+			{% include "dashboard/import.html.twig" %}
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-sm-6 col-lg-4">
+			<table class="table table-dashboard {{ deltaStatus }}">
+				<thead>
+					<tr>
+						<th colspan="2">Bugfix</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					{% include "dashboard/modrewrite.html.twig" %}
+					{% include "dashboard/themechange.html.twig" %}
+				</tbody>
+			</table>
+		</div>
+	</div>
 </div>
