--- a/twig/dashboard.html.twig
+++ b/twig/dashboard.html.twig
@@ -30,6 +30,7 @@
 				<tbody>
 					{% include "dashboard/modrewrite.html.twig" %}
 					{% include "dashboard/themechange.html.twig" %}
+					{% include "dashboard/createpages.html.twig" %}
 				</tbody>
 			</table>
 		</div>
