copy-paste start fra flickr

--- a/twig/dashboard/api.html.twig
+++ b/twig/dashboard/api.html.twig
@@ -23,6 +23,10 @@
             <td>{% include "cloudflare/dashboard.html.twig" %}</td>
         </tr>
         <tr>
+            <td>Livestream</td>
+            <td>{% include "livestream/dashboard.html.twig" %}</td>
+        </tr>
+        <tr>
             <td>Mailchimp</td>
             <td>Integrering er ikke gjort</td>
         </tr>
