Opprett kontaktsider på alle fylker og kommuner med GUI info

--- a/twig/season/home.html.twig
+++ b/twig/season/home.html.twig
@@ -69,6 +69,9 @@
             <a href="?page={{ GET('page') }}&action=website_create">Opprett sider for alle kommuner og fylker</a>
         </li>
 		<li>
+            <a href="?page={{ GET('page') }}&action=kontaktsider">Opprett kontaktsider for alle fylker og kommuner</a>
+        </li>
+		<li>
 			<a href="?page={{ GET('page') }}&action=wp_setup">Oppdater wordpress </a>
 		</li>
 		<li>
